# ZipHammer

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs  password.rs  passwordcreater.rs  wordtype.rs
src/tests/: tests.rs
tests/: test.rs
ui/: main.slint
