[package]
name = "ZipHammer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
rand = "0.8.5"
slint = {version = "1.6.0",default-features = false ,features = ["backend-winit","renderer-femtovg","compat-1-2"]}
zip = {version = "2.1.3",features = ["aes-crypto"]}

umya-spreadsheet = "2.0.0"
rfd = "0.14.1"

[build-dependencies]
slint-build = "1.6.0"
